made md file for readme in ass1b folder

--- a/AssignmentB1/README.Rmd
+++ b/AssignmentB1/README.Rmd
@@ -1,3 +1,7 @@
+---
+output: github_document
+---
+
 # Assignment B1 Folder
 
 This folder contains the .md and .rmd files for STAT545B assignment B1. This folder also contains a zooplankton biomass CSV file containing a dataset from DFO, and a folder containing the figures present in the .md file. The .md file and assignment_1b_files folder should be kept together.
