Added drop_na to function

--- a/AssignmentB1/assignment_1b.Rmd
+++ b/AssignmentB1/assignment_1b.Rmd
@@ -126,8 +126,10 @@ calculations_y <- summarise(dataframe, is.numeric = is.numeric({{ y }}) | is.dou
   }
   
 
-  ggplot(dataframe, aes({{ x }}, {{ y }})) + 
-  geom_boxplot(aes(fill= {{ x }})) + 
+  dataframe %>% 
+    drop_na({{x}}, {{y}}) %>% 
+    ggplot(aes({{ x }}, {{ y }})) +
+    geom_boxplot(aes(fill= {{ x }})) + 
     theme_linedraw() +
     #below line of code from Elferts 2016
     theme(axis.text.x=element_blank(),
@@ -135,6 +137,7 @@ calculations_y <- summarise(dataframe, is.numeric = is.numeric({{ y }}) | is.dou
           axis.title.x=element_blank())
 }
 
+# drop na https://community.rstudio.com/t/removing-na-from-used-column-in-ggplot/76579
 # remove na https://stackoverflow.com/questions/17216358/eliminating-nas-from-a-ggplot
 
 # idea to include dataframe from Kea, Yulia directed me to her code
