--- a/AssignmentB1/assignment_1b.Rmd
+++ b/AssignmentB1/assignment_1b.Rmd
@@ -128,6 +128,7 @@ calculations_y <- summarise(dataframe, is.numeric = is.numeric({{ y }}) | is.dou
   
 
   dataframe %>% 
+    #below line of code from Leon 2020
     drop_na({{x}}, {{y}}) %>% 
     ggplot(aes({{ x }}, {{ y }})) +
     geom_boxplot(aes(fill= {{ x }})) + 
@@ -276,4 +277,6 @@ Elferts D. 2016. Remove all of x axis labels in ggplot [duplicate]. Stack Overfl
 
 Government of Canada. [date unknown]. Zooplankton database. Fisheries and Oceans Canada; [accessed 2021 Oct 9]. https://open.canada.ca/data/en/dataset/9447ecf8-a7f7-4904-8ab0-3c597c534c4b
 
-Joels. 2018. Converting dates (Year - Month - Day) to 3 separate columns (Year , Month , Day). Studio Community; [modified 2018 May 18; accessed 2021 Oct 19]. https://community.rstudio.com/t/converting-dates-year-month-day-to-3-separate-columns-year-month-day/8585/4
+Joels. 2018. Converting dates (Year - Month - Day) to 3 separate columns (Year , Month , Day). R Studio Community; [modified 2018 May 18; accessed 2021 Oct 19]. https://community.rstudio.com/t/converting-dates-year-month-day-to-3-separate-columns-year-month-day/8585/4
+
+Leon. 2020. Removing NA from used column in ggplot. R Studio Community; [modified 2020 Aug 16; accessed 2021 Nov 2]. https://community.rstudio.com/t/removing-na-from-used-column-in-ggplot/76579
