--- a/AssignmentB1/assignment_1b.Rmd
+++ b/AssignmentB1/assignment_1b.Rmd
@@ -250,7 +250,7 @@ test_that("Testing if Examples for Boxplot Function Work or Do Not Work as Expec
   #test to see if examples 1 and 2 (above) run without an error message
   expect_silent(boxplot_numeric_category(dataframe = CO2, x = Treatment, y = conc))
   expect_silent(starwars %>% boxplot_numeric_category(sex, height))
-  #test to see if example 3 (above) run without an error message
+  #test to see if example 3 (above) runs without an error message
   expect_silent(boxplot_numeric_category((storms %>% filter(name == c("Amy", "Doris"))), name, wind))
    #test to see if example 4 (above) runs with the correct error message specified in the boxplot_numeric_category function code
   expect_error(boxplot_numeric_category(starwars, sex, name), "You have entered a non-numeric, non-integer, or non-double input. Please enter a variable of a numeric, integer, or double class for the y input. Class type of the variable you entered is: ")
